<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shop_cat_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/shop_order_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:focusable="true"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/shop_clean_order"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/shop_car_no"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center_vertical"
                android:singleLine="true"
                android:text="@string/shop_car_name"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/shop_car_num"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22dp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/shop_car_price"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22dp" />
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/order_list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:divider="@drawable/pay_diver"
        android:listSelector="@color/transparent"
        android:scrollbars="none"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shop_allprices"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:singleLine="true"
                android:text="@string/shop_allprice"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:paddingRight="20dp">

            <ImageButton
                android:id="@+id/shop_order_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ok_btn"
                android:text="@string/vod_ok"
                android:textColor="@color/white"
                android:textSize="22dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>