<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shop_cat_bg"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|right">

            <TextView
                android:id="@+id/shop_cart_clean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:drawableLeft="@drawable/shop_cleancar"
                android:focusable="true" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/email_divider_h" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/email_divider_h" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.64"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/shop_car_no"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/email_divider_v" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3.04"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/shop_car_name"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/email_divider_v" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.02"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/shop_car_num"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/email_divider_v" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.79"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/shop_car_price"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@drawable/email_divider_v" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/shop_tolprice"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22sp" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/email_divider_h" />

    <ListView
        android:id="@+id/cart_list"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_weight="1"
        android:divider="@color/transparent"
        android:listSelector="@color/transparent"
        android:scrollbars="none"></ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shop_allprice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="21dp"
                android:singleLine="true"
                android:text="@string/shop_allprice"
                android:textColor="@drawable/livelist_txt"
                android:textSize="22sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="horizontal"
            android:paddingRight="7dp">


            <TextView
                android:id="@+id/shop_cart_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/shop_cat_ok"
                android:focusable="true" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>