<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/fram_wifi_ico" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="67dp"
                android:paddingLeft="34dp"
                android:paddingRight="34dp"
                android:paddingTop="45dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/wifi_hline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="13dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_ssid"
                        android:textColor="@color/white"
                        android:textSize="23sp" />

                    <EditText
                        android:id="@+id/wifi_ssid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/wifi_edit"
                        android:nextFocusDown="@+id/wifi_psw"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:singleLine="true"
                        android:text="@string/wifi_ssidname"
                        android:textColor="@color/white"
                        android:textSize="23sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/wifi_hline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_safe"
                        android:textColor="@color/white"
                        android:textSize="23sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/wifi_safetype"
                        android:textColor="@color/white"
                        android:textSize="23sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/wifi_hline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="19dp"
                    android:layout_marginLeft="26dp"
                    android:layout_marginTop="19dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wifi_psw"
                        android:textColor="@color/white"
                        android:textSize="23sp" />

                    <EditText
                        android:id="@+id/wifi_psw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:background="@drawable/wifi_edit"
                        android:nextFocusDown="@+id/showpsw"
                        android:paddingLeft="16dp"
                        android:paddingRight="16dp"
                        android:singleLine="true"
                        android:text="@string/wifi_pswd"
                        android:textColor="@color/white"
                        android:textSize="23sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@drawable/wifi_hline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="28dp"
                    android:layout_marginTop="26dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/showpsw"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:nextFocusDown="@+id/wifi_start"
                        android:nextFocusUp="@+id/wifi_psw" />

                    <TextView
                        android:layout_width="115dp"
                        android:layout_height="wrap_content"
                        android:ellipsize="marquee"
                        android:gravity="center"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/wifi_showpsw"
                        android:textColor="@color/white"
                        android:textSize="22dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:ellipsize="marquee"
                        android:gravity="center|right"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:singleLine="true"
                        android:text="@string/wifi_showpswd"
                        android:textColor="@color/white"
                        android:textSize="18dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="52dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/wifi_start"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/wifi_start_btn" />

                    <ImageButton
                        android:id="@+id/wifi_stop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="142dp"
                        android:background="@drawable/wifi_stop_btn" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>

</ScrollView>