<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fram_bg"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/fram_satisfied_ico" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="6dp"
            android:paddingLeft="31dp"
            android:paddingRight="31dp"
            android:paddingTop="22dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="27sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:lineSpacingExtra="5dp"
                android:text="@string/tishi"
                android:textColor="@color/white"
                android:textSize="21sp" />

            <GridView
                android:id="@+id/satisfied_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:descendantFocusability="afterDescendants"
                android:listSelector="@color/transparent"
                android:numColumns="1"
                android:scrollbars="none"></GridView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <!--<ImageButton-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@drawable/ok_btn" />-->

                <Button
                    android:id="@+id/satisfied_submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Ok"
                    android:textColor="@color/white"
                    android:textSize="25sp" />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</LinearLayout>